Bug 503813. Events targeted at generated content frames should get the non-generated ancestor as target element. r=dbaron